fixtures/solidity/translated_semantic_tests/errors/require_error_uint256/require_error_uint256.sol
error CustomError(uint256);
contract C
{
    function f() external pure
    {
        require(false, CustomError(1));
    }
    function g() external pure
    {
        require(false, CustomError(2));
    }
}